--- a/Rest_APIDemo/Rest_APIDemo/test-output/old/Default suite/classes.html
+++ b/Rest_APIDemo/Rest_APIDemo/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.rest.Get</td>
+<td>com.restassured.Get</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>get</td>
+<td>getAll</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
